# zipatch-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: parse_patch.rs
src/: config.rs  error.rs  file.rs  lib.rs
src/chunk/: add_directory.rs  apply_free_space.rs  apply_option.rs  delete_directory.rs  end_of_file.rs  file_header.rs  mod.rs  xxxx.rs
src/chunk/sqpk/: add_data.rs  delete_data.rs  expand_data.rs  file.rs  header.rs  index.rs  mod.rs  patch_info.rs  target_info.rs
src/inspection/: change_set.rs  command_counts.rs  mod.rs
src/util/: advance_guard.rs  binary_reader.rs  checksum_reader.rs  compressed_block.rs  crc32.rs  mod.rs  sqex_file.rs  sqex_file_stream.rs  sqex_stream_store.rs  sqpack_file.rs
