[package]
name = "zipatch"
version = "1.0.0"
edition = "2021"
rust-version = "1.78.0"
description = "A library for parsing and applying ZiPatch files, as used in Final Fantasy XIV"
license = "MIT"
repository = "https://github.com/avafloww/zipatch-rust"
keywords = ["ffxiv", "patch", "zipatch", "gaming"]
categories = ["parser-implementations", "game-development"]

[dependencies]
byteorder = "1"
flate2 = "1"
crc32fast = "1"
thiserror = "2"
